--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ roles:
    start: 2008
    end: 2012
    employer: United State Marine Corps
-   description: Role requirements: Management and control of stressful situations. Command of section (15+ Marines) and platoon (45+ Marines) during consecutive combat deployments to Afghanistan.
+   description: Role requirements - Management and control of stressful situations. Command of section (15+ Marines) and platoon (45+ Marines) during consecutive combat deployments to Afghanistan.
 
 #Education is required
 education:
